[package]
name = "qbz-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for QBZ"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
qbz-core = { path = "../qbz-core" }
qbz-models = { path = "../qbz-models" }
qbz-player = { path = "../qbz-player" }
qbz-audio = { path = "../qbz-audio" }
qbz-qobuz = { path = "../qbz-qobuz" }
qbz-cache = { path = "../qbz-cache" }
reqwest = { workspace = true }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
ratatui-image = { version = "4", features = ["crossterm"] }
image = "0.25"

# Credential loading (shared logic with src-tauri/src/credentials/)
keyring = "3"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
