[package]
name = "qbz-tui"
version = "0.2.0"
edition = "2021"
description = "Terminal UI for QBZ — thin client over V2 crates"

[dependencies]
# V2 crates (all business logic)
qbz-core = { path = "../qbz-core" }
qbz-models = { path = "../qbz-models" }
qbz-player = { path = "../qbz-player" }
qbz-audio = { path = "../qbz-audio" }
qbz-qobuz = { path = "../qbz-qobuz" }
qbz-cache = { path = "../qbz-cache" }
qbz-library = { path = "../qbz-library" }
qconnect-app = { path = "../qconnect-app" }
qconnect-core = { path = "../qconnect-core" }
qconnect-transport-ws = { path = "../qconnect-transport-ws" }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"
ratatui-image = { version = "4", features = ["crossterm"] }
image = "0.25"

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { workspace = true }
futures-util = { workspace = true }

# Logging
log = "0.4"
env_logger = "0.11"

# Credential loading (shared with desktop)
keyring = "3"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
rand = "0.10"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
