[package]
name = "qconnect-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UI-agnostic Qobuz Connect application adapter"

[dependencies]
qconnect-core = { path = "../qconnect-core" }
qconnect-protocol = { path = "../qconnect-protocol" }
qconnect-transport-ws = { path = "../qconnect-transport-ws" }
async-trait = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
prost = "0.13"
