[package]
name = "qconnect-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UI-agnostic domain core for Qobuz Connect queue and concurrency"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
qbz-models = { path = "../qbz-models" }
